trunk/Archive2/18/705de65085c178/output
main.cpp:3:1: error: static assertion failed: ...
 static_assert(std::is_assignable<int, int>(), "...");
 ^
