trunk/Archive2/18/705de65085c178/main.cpp
#include <type_traits>

static_assert(std::is_assignable<int, int>(), "...");

int main(){}